Authentication, Roles, Permisos, Session

--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
@@ -27,6 +28,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Login", "Login", "Auth")</li>
                     <li>@Html.ActionLink("Logon", "Logon", "Auth")</li>
+                    <li>@Html.ActionLink("Salir", "CerrarSesion", "Auth")</li>
                 </ul>
             </div>
         </div>
