--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -26,8 +26,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Login", "Login", "Auth")</li>
-                    <li>@Html.ActionLink("Logon", "Logon", "Auth")</li>
+                    <li>@Html.ActionLink("Ingresar", "Login", "Auth")</li>
+                    <li>@Html.ActionLink("Registrar", "Logon", "Auth")</li>
                     <li>@Html.ActionLink("Salir", "CerrarSesion", "Auth")</li>
                 </ul>
             </div>
